--- a/package.json
+++ b/package.json
@@ -2,9 +2,15 @@
   "name": "restaurant",
   "version": "0.0.0",
   "private": true,
-  "scripts": {
-    "start": "node ./bin/www"
+  "engines": {
+    "node": "12.x"
   },
+  "main": "./bin/www",
+  "scripts": {
+    "start": "node ./bin/www",
+    "test": "echo NO TEST && exit 1"
+  },
+  
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
